local,amplify環境変数参照

--- a/src/views/common/_footer.ejs
+++ b/src/views/common/_footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="footer-logo">
-    <a href="#" class="footer-logo-img"><img src="<%= meta.basePath %>asset/img/common/logo_horizontal_footer.svg" alt="TCROSS"></a>
+    <a href="#" class="footer-logo-img"><img src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/logo_horizontal_footer.svg" alt="TCROSS"></a>
   </div>
   <div class="footer-nav">
     <nav>
@@ -11,8 +11,8 @@
         <li><a href="#">News</a></li>
         <li><a href="#">Contact</a></li>
         <li>|</li>
-        <a href="#"><img class="footer-nav-facebook" src="<%= meta.basePath %>asset/img/common/facebook.svg" alt="faceBook"></a>
-        <a href="#"><img class="footer-nav-x" src="<%= meta.basePath %>asset/img/common/x.svg" alt="X"></a>
+        <a href="#"><img class="footer-nav-facebook" src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/facebook.svg" alt="faceBook"></a>
+        <a href="#"><img class="footer-nav-x" src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/x.svg" alt="X"></a>
       </ul>
     </nav>
   </div>
