--- a/src/views/common/_headContent.ejs
+++ b/src/views/common/_headContent.ejs
@@ -19,8 +19,8 @@
     <meta property="og:site_name" content="<%= meta.ogSiteName %>">
     <meta property="og:locale" content="<%= meta.ogLocale %>">
 
-    <link rel="stylesheet" href="<%= meta.basePath %>asset/css/main.bundle.css">
-    <link rel="stylesheet" href="<%= meta.basePath %>asset/css/common.css">
+    <link rel="stylesheet" href="<%= meta.basePath %><%= ASSET_PATH %>asset/css/main.bundle.css">
+    <link rel="stylesheet" href="<%= meta.basePath %><%= ASSET_PATH %>asset/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
