--- a/src/views/common/_header.ejs
+++ b/src/views/common/_header.ejs
@@ -10,7 +10,7 @@
   </div>
   <div class="header-nav">
     <div class="header-nav-wapper">
-      <h1><a href="#" class="header-nav-logo"><img src="<%= meta.basePath %>asset/img/common/logo_horizontal.svg" alt="TCROSS"></a></h1>
+      <h1><a href="#" class="header-nav-logo"><img src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/logo_horizontal.svg" alt="TCROSS"></a></h1>
       <nav class="header-nav-menu">
         <ul>
           <li><a href="#">Who we are</a></li>
