--- a/src/views/en/about.ejs
+++ b/src/views/en/about.ejs
@@ -44,35 +44,35 @@
                         <ul class="about-strengths-list">
                             <li class="about-strengths-list-item">
                                 <div>
-                                    <img src="../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <h4>高度な専門人材</h4>
                                 <p>博士・修士保有者、医師、看護師など、高度な専門資格を持つ人材による体制</p>
                             </li>
                             <li class="about-strengths-list-item">
                                 <div>
-                                    <img src="../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <h4>専門性と展開力</h4>
                                 <p>循環器領域で培った専門性と幅広い医療分野への展開力</p>
                             </li>
                             <li class="about-strengths-list-item">
                                 <div>
-                                    <img src="../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <h4>豊富な実績</h4>
                                 <p>国内外の製薬・医療機器企業との豊富な実績</p>
                             </li>
                             <li class="about-strengths-list-item">
                                 <div>
-                                    <img src="../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <h4>高度なデータ活用力</h4>
                                 <p>独自開発ソリューション「InsighTCROSS®」を含む高度なデータ活用力</p>
                             </li>
                             <li class="about-strengths-list-item">
                                 <div>
-                                    <img src="../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <h4>知的財産の強み</h4>
                                 <p>知的財産の強み：国内特許3件、出願中2件、PCT出願5件（2025年9月現在）</p>
