--- a/src/views/jp/index.ejs
+++ b/src/views/jp/index.ejs
@@ -46,32 +46,32 @@
             <h2 class="our-services-title c-inter"><span>Our</span> Services</h2>
             <div class="our-services-list">
               <div class="our-services-list-busines">
-                <div><img src="../../asset/img/top/our-services1.png" alt="データサイエンス事業"></div>
+                <div><img src="../../<%= ASSET_PATH %>asset/img/top/our-services1.png" alt="データサイエンス事業"></div>
                 <h3>データサイエンス事業</h3>
               </div>
 
               <div class="our-services-list-busines">
-                <div><img src="../../asset/img/top/our-services2.png" alt="臨床研究サポート事業"></div>
+                <div><img src="../../<%= ASSET_PATH %>asset/img/top/our-services2.png" alt="臨床研究サポート事業"></div>
                 <h3>臨床研究サポート事業</h3>
               </div>
 
               <div class="our-services-list-busines">
-                <div><img src="../../asset/img/top/our-services3.png" alt="イベントコーディネート事業"></div>
+                <div><img src="../../<%= ASSET_PATH %>asset/img/top/our-services3.png" alt="イベントコーディネート事業"></div>
                 <h3>イベントコーディネート事業</h3>
               </div>
 
               <div class="our-services-list-busines">
-                <div><img src="../../asset/img/top/our-services4.png" alt="WEB マーケティング事業"></div>
+                <div><img src="../../<%= ASSET_PATH %>asset/img/top/our-services4.png" alt="WEB マーケティング事業"></div>
                 <h3>WEB マーケティング事業</h3>
               </div>
 
               <div class="our-services-list-busines">
-                <div><img src="../../asset/img/top/our-services5.png" alt="メディアコミュニケーション事業"></div>
+                <div><img src="../../<%= ASSET_PATH %>asset/img/top/our-services5.png" alt="メディアコミュニケーション事業"></div>
                 <h3>メディアコミュニケーション事業</h3>
               </div>
 
               <div class="our-services-list-busines">
-                <div><img src="../../asset/img/top/our-services6.png" alt="コンサルティング事業"></div>
+                <div><img src="../../<%= ASSET_PATH %>asset/img/top/our-services6.png" alt="コンサルティング事業"></div>
                 <h3>コンサルティング事業</h3>
               </div>
             </div>
@@ -103,14 +103,14 @@
                 </a>
               </div>
               <div class="recruit-explanation-image">
-                <img src="../../asset/img/top/recruit.jpg" alt="recruit">
+                <img src="../../<%= ASSET_PATH %>asset/img/top/recruit.jpg" alt="recruit">
               </div>
             </div>
 
           </section>
           <%- include('/common/_contact') %>
             <%- include('/common/_footer', { meta }) %>
-              <script src="<%= meta.basePath %>asset/js/main.js"></script>
+              <script src="<%= meta.basePath %><%= ASSET_PATH %>asset/js/main.js"></script>
       </body>
 
     </html>
