--- a/src/views/jp/services/clinical.ejs
+++ b/src/views/jp/services/clinical.ejs
@@ -21,7 +21,7 @@
                         <div class="c-modal-case">
                             <h4>循環器治療の主要領域を網羅した、包括的ライブイベントの実現</h4>
                             <h5>豊橋ライブデモンストレーションコース</h5>
-                            <div class="c-modal-case-img"><img src="../../../asset/img/about/strengths1.png"></div>
+                            <div class="c-modal-case-img"><img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"></div>
                             <h6>成果</h6>
                             <ul>
                                 <li>2025年の開催では、5日間・6配信ルーム・100を超えるプログラムを実施</li>
@@ -48,7 +48,7 @@
                                 </p>
                             </div>
                             <div>
-                                <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                             </div>
                         </div>
                     </section>
@@ -57,7 +57,7 @@
                         <h3 class="c-headline">臨床研究サポート事業におけるTCROSSの強み</h3>
                         <div class="c-explanation-content">
                             <div>
-                                <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                             </div>
                             <ul>
                                 <li>
@@ -104,7 +104,7 @@
                             <li>
                                 <h5>ビジョン設計</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     医療の意義から逆算する企画<br />社会的意義と将来像を明確化
@@ -113,7 +113,7 @@
                             <li>
                                 <h5>データ分析・戦略立案</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     数字で“人の動き”を読むログ・SNS反応から戦略を構築
@@ -122,7 +122,7 @@
                             <li>
                                 <h5>広報・コンテンツ設計</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     届くメッセージを設計<br />医療従事者・企業双方に訴求
@@ -131,7 +131,7 @@
                             <li>
                                 <h5>運営・進行管理</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     現場に強い運営力<br />学会水準の品質と多演者対応
@@ -140,7 +140,7 @@
                             <li>
                                 <h5>効果分析と改善提案</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     成果を見える化<br />KPIを分析し次に活かす
@@ -154,7 +154,7 @@
                         <ul class="c-example-list">
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>循環器治療の主要領域を網羅した、包括的ライブイベントの実現</h4>
@@ -166,7 +166,7 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>日本発の分岐部治療研究会として、世界の潮流と歩む</h4>
@@ -184,7 +184,7 @@
                         <ul class="c-member-list">
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>橋本 悟</h4>
@@ -199,7 +199,7 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>許沢 佳弘</h4>
@@ -214,7 +214,7 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>小田桐 周平</h4>
@@ -236,27 +236,27 @@
                         <ul class="clinical-suuport-step">
                             <li>
                                 <h5>STEP 1</h5>
-                                <div class="clinical-suuport-step-img"><img src="../../../asset/img/services/ellipse1.png" alt="STEP1"></div>
+                                <div class="clinical-suuport-step-img"><img src="../../../<%= ASSET_PATH %>asset/img/services/ellipse1.png" alt="STEP1"></div>
                                 <p>お問い合わせ<br />お打ち合わせ</p>
                             </li>
                             <li>
                                 <h5>STEP 2</h5>
-                                <div class="clinical-suuport-step-img"><img src="../../../asset/img/services/ellipse2.png" alt="STEP2"></div>
+                                <div class="clinical-suuport-step-img"><img src="../../../<%= ASSET_PATH %>asset/img/services/ellipse2.png" alt="STEP2"></div>
                                 <p>研究の企画</p>
                             </li>
                             <li>
                                 <h5>STEP 3</h5>
-                                <div class="clinical-suuport-step-img"><img src="../../../asset/img/services/ellipse3.png" alt="STEP3"></div>
+                                <div class="clinical-suuport-step-img"><img src="../../../<%= ASSET_PATH %>asset/img/services/ellipse3.png" alt="STEP3"></div>
                                 <p>資金調達支援</p>
                             </li>
                             <li>
                                 <h5>STEP 4</h5>
-                                <div class="clinical-suuport-step-img"><img src="../../../asset/img/services/ellipse4.png" alt="STEP4"></div>
+                                <div class="clinical-suuport-step-img"><img src="../../../<%= ASSET_PATH %>asset/img/services/ellipse4.png" alt="STEP4"></div>
                                 <p>協力医師<br />協力企業との調整</p>
                             </li>
                             <li>
                                 <h5>STEP 5</h5>
-                                <div class="clinical-suuport-step-img"><img src="../../../asset/img/services/ellipse5.png" alt="STEP5"></div>
+                                <div class="clinical-suuport-step-img"><img src="../../../<%= ASSET_PATH %>asset/img/services/ellipse5.png" alt="STEP5"></div>
                                 <p>論文化&学会発表</p>
                             </li>
                         </ul>
@@ -264,7 +264,7 @@
                     
                     <%- include('/common/_contact') %>
                         <%- include('/common/_footer', { meta }) %>
-                            <script src="<%= meta.basePath %>asset/js/main.js"></script>
+                            <script src="<%= meta.basePath %><%= ASSET_PATH %>asset/js/main.js"></script>
 
             </body>
 
