--- a/src/views/jp/services/marketing.ejs
+++ b/src/views/jp/services/marketing.ejs
@@ -26,7 +26,7 @@
                 </p>
               </div>
               <div>
-                <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
               </div>
             </div>
           </section>
@@ -35,7 +35,7 @@
             <h3 class="c-headline">第一線の循環器内科医が広く活用するプラットフォーム</h3>
             <div class="c-explanation-content">
               <div>
-                <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
               </div>
               <ul>
                 <li>
@@ -80,7 +80,7 @@
               <li>
                 <h5>マーケティング企画</h5>
                 <div>
-                  <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                  <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                 </div>
                 <p>
                   TCROSS NEWS利用データを<br />もとに、最適なマーケティン<br />グ企画をご提案
@@ -89,7 +89,7 @@
               <li>
                 <h5>コンテンツ制作</h5>
                 <div>
-                  <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                  <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                 </div>
                 <p>
                   専門のライターチームにより<br />各種ガイドラインを遵守した<br />信頼性の高い記事や動画制作<br />が可能
@@ -98,7 +98,7 @@
               <li>
                 <h5>プロモーション</h5>
                 <div>
-                  <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                  <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                 </div>
                 <p>
                   虚血、心不全、不整脈など各<br />専門の医師が最も興味を持つ<br />切り口でコンテンツのプロ<br />モーションをサポート
@@ -107,7 +107,7 @@
               <li>
                 <h5>アンケート調査</h5>
                 <div>
-                  <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                  <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                 </div>
                 <p>
                   アンケート項目の設計から<br />ターゲット医師への調査配<br />信、結果分析まで次につなが<br />る調査をご提供
@@ -121,7 +121,7 @@
             <ul class="c-example-list">
               <li>
                 <div>
-                  <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                  <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                 </div>
                 <div>
                   <h4>CASE 1 --- 事例名を掲載</h4>
@@ -135,7 +135,7 @@
               </li>
               <li>
                 <div>
-                  <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                  <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                 </div>
                 <div>
                   <h4>CASE 2 --- 事例名を掲載</h4>
@@ -152,7 +152,7 @@
 
           <%- include('/common/_contact') %>
             <%- include('/common/_footer', { meta }) %>
-              <script src="<%= meta.basePath %>asset/js/main.js"></script>
+              <script src="<%= meta.basePath %><%= ASSET_PATH %>asset/js/main.js"></script>
 
       </body>
 
