--- a/src/views/en/index.ejs
+++ b/src/views/en/index.ejs
@@ -48,32 +48,32 @@
                         <h2 class="our-services-title c-inter">Our Services</h2>
                         <div class="our-services-list">
                             <a href="#" class="our-services-list-business">
-                                <img src="../../asset/img/top/our-services1.png" alt="データサイエンス事業">
+                                <img src="../../<%= ASSET_PATH %>asset/img/top/our-services1.png" alt="データサイエンス事業">
                                 <h3>データサイエンス事業</h3>
                             </a>
 
                             <a href="#" class="our-services-list-business">
-                                <img src="../../asset/img/top/our-services2.png" alt="臨床研究サポート事業">
+                                <img src="../../<%= ASSET_PATH %>asset/img/top/our-services2.png" alt="臨床研究サポート事業">
                                 <h3>臨床研究サポート事業</h3>
                             </a>
 
                             <a href="#" class="our-services-list-business">
-                                <img src="../../asset/img/top/our-services3.png" alt="イベントコーディネート事業">
+                                <img src="../../<%= ASSET_PATH %>asset/img/top/our-services3.png" alt="イベントコーディネート事業">
                                 <h3>イベントコーディネート事業</h3>
                             </a>
 
                             <a href="#" class="our-services-list-business">
-                                <img src="../../asset/img/top/our-services4.png" alt="WEB マーケティング事業">
+                                <img src="../../<%= ASSET_PATH %>asset/img/top/our-services4.png" alt="WEB マーケティング事業">
                                 <h3>WEB マーケティング事業</h3>
                             </a>
 
                             <a href="#" class="our-services-list-business">
-                                <img src="../../asset/img/top/our-services5.png" alt="メディアコミュニケーション事業">
+                                <img src="../../<%= ASSET_PATH %>asset/img/top/our-services5.png" alt="メディアコミュニケーション事業">
                                 <h3>メディアコミュニケーション事業</h3>
                             </a>
 
                             <a href="#" class="our-services-list-business">
-                                <img src="../../asset/img/top/our-services6.png" alt="コンサルティング事業">
+                                <img src="../../<%= ASSET_PATH %>asset/img/top/our-services6.png" alt="コンサルティング事業">
                                 <h3>コンサルティング事業</h3>
                             </a>
                         </div>
@@ -106,12 +106,12 @@
                             </a>
                         </div>
                         <div class="recruit-image">
-                            <img src="../../asset/img/top/recruit.png" alt="recruit">
+                            <img src="../../<%= ASSET_PATH %>asset/img/top/recruit.png" alt="recruit">
                         </div>
                     </section>
                     <%- include('/common/_contact') %>
                         <%- include('/common/_footer', { meta }) %>
-                            <script src="<%= meta.basePath %>asset/js/main.js"></script>
+                            <script src="<%= meta.basePath %><%= ASSET_PATH %>asset/js/main.js"></script>
             </body>
 
         </html>
