--- a/src/views/en/services/event.ejs
+++ b/src/views/en/services/event.ejs
@@ -22,7 +22,7 @@
                         <div class="c-modal-case">
                             <h4>循環器治療の主要領域を網羅した、包括的ライブイベントの実現</h4>
                             <h5>豊橋ライブデモンストレーションコース</h5>
-                            <div class="c-modal-case-img"><img src="../../../asset/img/about/strengths1.png"></div>
+                            <div class="c-modal-case-img"><img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"></div>
                             <h6>成果</h6>
                             <ul>
                                 <li>2025年の開催では、5日間・6配信ルーム・100を超えるプログラムを実施</li>
@@ -50,7 +50,7 @@
                                 </p>
                             </div>
                             <div>
-                                <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                             </div>
                         </div>
                     </section>
@@ -59,7 +59,7 @@
                         <h3 class="c-headline">依頼に応えるだけでなく、医療の現場と市場の変化を捉え、<br />新しい企画を自ら生み出すイベントプロデュースチーム</h3>
                         <div class="c-explanation-content">
                             <div>
-                                <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                             </div>
                             <ul>
                                 <li>
@@ -107,7 +107,7 @@
                             <li>
                                 <h5>ビジョン設計</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     医療の意義から逆算する企画<br />社会的意義と将来像を明確化
@@ -116,7 +116,7 @@
                             <li>
                                 <h5>データ分析・戦略立案</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     数字で“人の動き”を読むログ・SNS反応から戦略を構築
@@ -125,7 +125,7 @@
                             <li>
                                 <h5>広報・コンテンツ設計</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     届くメッセージを設計<br />医療従事者・企業双方に訴求
@@ -134,7 +134,7 @@
                             <li>
                                 <h5>運営・進行管理</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     現場に強い運営力<br />学会水準の品質と多演者対応
@@ -143,7 +143,7 @@
                             <li>
                                 <h5>効果分析と改善提案</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     成果を見える化<br />KPIを分析し次に活かす
@@ -157,7 +157,7 @@
                         <ul class="c-example-list">
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>循環器治療の主要領域を網羅した、包括的ライブイベントの実現</h4>
@@ -169,7 +169,7 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>日本発の分岐部治療研究会として、世界の潮流と歩む</h4>
@@ -224,7 +224,7 @@
                         <ul class="c-member-list">
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>橋本 悟</h4>
@@ -239,7 +239,7 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>許沢 佳弘</h4>
@@ -254,7 +254,7 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>小田桐 周平</h4>
@@ -273,7 +273,7 @@
 
                     <%- include('/common/_contact') %>
                         <%- include('/common/_footer', { meta }) %>
-                            <script src="<%= meta.basePath %>asset/js/main.js"></script>
+                            <script src="<%= meta.basePath %><%= ASSET_PATH %>asset/js/main.js"></script>
 
             </body>
 
