--- a/src/views/jp/services/event.ejs
+++ b/src/views/jp/services/event.ejs
@@ -43,7 +43,7 @@
                                 </p>
                             </div>
                             <div class="js-scale">
-                                <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                             </div>
                         </div>
                     </section>
@@ -52,7 +52,7 @@
                         <h3 class="c-headline">依頼に応えるだけでなく、医療の現場と市場の変化を捉え、<br />新しい企画を自ら生み出すイベントプロデュースチーム</h3>
                         <div class="c-explanation-content">
                             <div>
-                                <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                             </div>
                             <ul>
                                 <li>
@@ -100,7 +100,7 @@
                             <li>
                                 <h5>ビジョン設計</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     医療の意義から逆算する企画<br />社会的意義と将来像を明確化
@@ -109,7 +109,7 @@
                             <li>
                                 <h5>データ分析・戦略立案</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     数字で“人の動き”を読むログ・SNS反応から戦略を構築
@@ -118,7 +118,7 @@
                             <li>
                                 <h5>広報・コンテンツ設計</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     届くメッセージを設計<br />医療従事者・企業双方に訴求
@@ -127,7 +127,7 @@
                             <li>
                                 <h5>運営・進行管理</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     現場に強い運営力<br />学会水準の品質と多演者対応
@@ -136,7 +136,7 @@
                             <li>
                                 <h5>効果分析と改善提案</h5>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
                                     成果を見える化<br />KPIを分析し次に活かす
@@ -150,7 +150,7 @@
                         <ul class="c-example-list">
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>循環器治療の主要領域を網羅した、包括的ライブイベントの実現</h4>
@@ -162,7 +162,7 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/about/strengths1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>日本発の分岐部治療研究会として、世界の潮流と歩む</h4>
@@ -217,7 +217,7 @@
                         <ul class="c-member-list">
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>橋本 悟</h4>
@@ -232,7 +232,7 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>許沢 佳弘</h4>
@@ -247,7 +247,7 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
                                 </div>
                                 <div>
                                     <h4>小田桐 周平</h4>
@@ -266,7 +266,7 @@
 
                     <%- include('/common/_contact') %>
                         <%- include('/common/_footer', { meta }) %>
-                            <script src="<%= meta.basePath %>asset/js/main.js"></script>
+                            <script src="<%= meta.basePath %><%= ASSET_PATH %>asset/js/main.js"></script>
 
             </body>
 
